2006-12-02  Tatsuya BIZENN  <bizenn@arthub.net>

	* Now we deprecate kahua.persistece.fs.  It was taken away from test
	  suites.  You should convert your fs data into kahua.persistence.efs
	  like this:

	  % kahua-dbutil upgrade <path-to-fsdb>

	  Note that this is in-place conversion.  Please keep its backup data
	  before this.

	  % cp -pR <path-to-fsdb> /tmp/backup-db

	* Before find-kahua-instance/make-kahua-collection with index value
	  Kahua invoke ensure-metainfo to sync index slot structure on-memory
	  and on-storage.

	* Fix cache handling strategy.

2006-11-28  Tatsuya BIZENN  <bizenn@arthub.net>

	* find-kahua-instance now can take index slot name(it must be
	  "unique" index) and its value like this:
	  (find-kahua-instance <a-class> unique-index-slot-nae value)

	* Now database name that has no prefix(like "efs:" or "mysql")
	  handled as efsdb path.

	* Fix that test/admin.scm and test/shell.scm depended
	  on cvs command.

	* Now PostgreSQL driver support index slot feature.

2006-11-27  Tatsuya BIZENN  <bizenn@arthub.net>

	* Now MySQL driver support index slot feature.

2006-11-21  Tatsuya BIZENN  <bizenn@arthub.net>

	* 0.8 released.

	* Fix: restrict index value to string, number, symbol, boolean, keyword,
	  vector and list whose all elements are these types.

2006-11-20  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: HTTP status
	  Server(worker) not found => 404
	  Server(worker) not respond => 503
	  Unknown error => 500

	* Fix: when kahua-dbutil upgrade fs to efs, it didn't create lock
	  directory in each class directory.

	* Change: now database name specified by :default-database-name is prior
	  to primary-database-name parameter in application source file.

	* Fix src/kahua/persistence/efs.scm: update index link before execution
	  of write-kahua-instance.

	* Update documents: INSTALL and doc/Setup.ja

	* Change plugins/fileio.scm
	  Now get-original-name return basename of Content-Disposition value.